Blackpurl/src/objects/Widget_User_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Widget_User_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WidgetOrder__c</fullName>
        <label>WidgetOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Widget</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipLabel>Widget User Junctions</relationshipLabel>
        <relationshipName>Widget_User_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Widget User Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Visible__c</columns>
        <columns>Widget__c</columns>
        <columns>WidgetOrder__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Tarun_Khandelwal</fullName>
        <columns>NAME</columns>
        <columns>Is_Visible__c</columns>
        <columns>Widget__c</columns>
        <columns>WidgetOrder__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Tarun Khandelwal</value>
        </filters>
        <label>Tarun Khandelwal</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WUJ-{0000000}</displayFormat>
        <label>Widget User Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widget User Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>